--- a/RMS.App/Views/AssignRequisitions/Create.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Create.cshtml
@@ -22,6 +22,13 @@
                 @Html.TextBox("RequisitionId", null, new {htmlAttributes = new {@class = "text-box single-line readonly"}})
                 @Html.ValidationMessageFor(model => model.RequisitionId, "Requisition Id Not Changed", new {@class = "text-danger"})
             </div>
+            <div class="form-group">
+                @Html.Label("Status Id", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("RequisitionStatusId", null, new { htmlAttributes = new { @class = "text-box single-line readonly" } })
+                    @Html.ValidationMessage("Status Id", "Requisition Id Not Changed", new { @class = "text-danger" })
+                </div>
+            </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.RequisitionNumber, "RequisitionNumber", htmlAttributes: new { @class = "control-label col-md-2" })
