--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -108,9 +108,10 @@
                             <li class="menu-has-children">
                                 <a href="#">Requisition Queue</a>
                                 <ul>
-                                    <li>@Html.ActionLink("Requisitions", "Requests", "AssignRequisitions")</li>
+                                    <li>@Html.ActionLink("New Requisitions", "Requests", "AssignRequisitions")</li>
                                     <li>@Html.ActionLink("Assigned Requisitions", "Index", "AssignRequisitions")</li>
                                     <li>@Html.ActionLink("Requisitions Status", "Index", "RequisitionStatus")</li>
+                                    <li>@Html.ActionLink("All Requisitions", "Index", "Requisitions")</li>
 
                                 </ul>
                             </li>
