--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -175,7 +175,7 @@
                             <div class="form-group row">
                                 @Html.LabelFor(model => model.AddressViewModel.DivisionId, htmlAttributes: new { @class = "control-label col-md-3" })
                                 <div class="col-md-9">
-                                    @Html.DropDownList("DivisionDropDown", new SelectList(Model.DivisionList, "Id", "Name"), "Select Division", htmlAttributes: new { @class = "form-control", id = "divisionDD" })
+                                    @Html.DropDownList("DivisionDropDown", new SelectList(Model.DivisionList, "Id", "Name"), "Select Division", htmlAttributes: new { @class = "form-control", @id = "divisionDD" })
                                     @Html.ValidationMessageFor(model => model.AddressViewModel.DivisionId, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -238,20 +238,20 @@
                             <div class="form-group row">
                                 @Html.LabelFor(model => model.AddressViewModel.DivisionId, htmlAttributes: new {@class = "control-label col-md-3"})
                                 <div class="col-md-9">
-                                    @Html.DropDownList("DivisionDropDown", new SelectList(Model.DivisionList, "Id", "Name"), "Select Division", htmlAttributes: new { @class = "form-control", id = "divisionDD" })
+                                    @Html.DropDownList("DivisionDropDown", new SelectList(Model.DivisionList, "Id", "Name"), "Select Division", htmlAttributes: new { @class = "form-control", @id = "divisionDD1" }) 
                                     @Html.ValidationMessageFor(model => model.AddressViewModel.DivisionId, "", new {@class = "text-danger"})
                                 </div>
                             </div>
                             <div class="form-group row">
                                 @Html.LabelFor(model => model.AddressViewModel.DistrictId, htmlAttributes: new {@class = "control-label col-md-3"})
                                 <div class="col-md-9">
-                                    @Html.DropDownList("DistrictDropDown", null, htmlAttributes: new {@class = "form-control", @id = "districtDD" })
+                                    @Html.DropDownList("DistrictDropDown", null, htmlAttributes: new {@class = "form-control", @id = "districtDD1" })
                                 </div>
                             </div>
                             <div class="form-group row">
                                 @Html.LabelFor(model => model.AddressViewModel.UpazilaId, htmlAttributes: new { @class = "control-label col-md-3" })
                                 <div class="col-md-9">
-                                    @Html.DropDownList("UpazilaDropDown", null, htmlAttributes: new { @class = "form-control", @id = "upazilaDD" })
+                                    @Html.DropDownList("UpazilaDropDown", null, htmlAttributes: new { @class = "form-control", @id = "upazilaDD1" })
 
                                 </div>
                             </div>
@@ -324,7 +324,8 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-<script src="~/Scripts/AddressJs/DivisionDistrictUpazilaLoad.js"></script>
-    @*<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-        <script src="~/Scripts/jquery-1.10.2.js"></script>*@
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    @*<script src="~/Scripts/jquery-1.10.2.js"></script>*@
+    <script src="~/Scripts/AddressJs/DivisionDistrictUpazilaLoad.js"></script>
+
 }
