--- a/RMS.App/Views/Employees/Edit.cshtml
+++ b/RMS.App/Views/Employees/Edit.cshtml
@@ -128,7 +128,7 @@
                     </div>
 
                     <div class="col-md-6">
-                        @Html.HiddenFor(modelItem => item.EmployeeId)
+                        @Html.HiddenFor(modelItem => item.Id)
                         @*<div class="form-group row">
                                 @Html.LabelFor(model => model.AddressViewModel.AddressType, htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-12">
@@ -218,7 +218,7 @@
                     </div>
 
                     <div class="col-md-6">
-                        @Html.HiddenFor(modelItem => item.EmployeeId)
+                        @Html.HiddenFor(modelItem => item.Id)
                         @*<div class="form-group row">
                             <div class="col-md-6">
                                 @Html.EditorFor(model => model.AddressViewModel.AddressType, null, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Permanent Address", Type = "Text", value = "Permanent Address", @readOnly = "readonly" } })
