--- a/RMS.App/Views/AssignRequisitions/Requests.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Requests.cshtml
@@ -5,10 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Requests</h2>
-
-<table class="table">
+<h2>New Requests List</h2>
+<br/>
+<table class="table table-bordered table-active table-striped">
     <tr>
+        <th>
+            SL
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.StatusType)
         </th>
@@ -18,25 +21,42 @@
         <th>
             @Html.DisplayNameFor(model => model.RequisitionId)
         </th>
-        <th></th>
+        <th>
+            Action
+        </th>
     </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.StatusType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RequisitionNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RequisitionId)
-        </td>
-        <td>
-            @Html.ActionLink("Assign Requisition", "Create", new { id=item.RequisitionId }) |
-            @Html.ActionLink("View", "ViewDetails", new { id=item.Id }) 
-        </td>
-    </tr>
-}
-
+    @{
+        var sl = 0;
+        if (Model.Count() != 0)
+        {
+            foreach (var item in Model)
+            {
+                sl++;
+                <tr>
+                    <td>
+                        @sl
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.StatusType)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RequisitionNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RequisitionId)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Assign Requisition", "Create", new {id = item.RequisitionId}) |
+                        @Html.ActionLink("View", "ViewDetails", new {id = item.Id})
+                    </td>
+                </tr>
+            }
+        }
+        else
+        {
+            <tr>
+                <td class="text-center text-danger" colspan="5"> Data Not Found!</td>
+            </tr>
+        }
+    }
 </table>
