--- a/RMS.App/Views/GatePass/CheckIn.cshtml
+++ b/RMS.App/Views/GatePass/CheckIn.cshtml
@@ -5,11 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>CheckIn</h2>
+<h2>Check-In List</h2>
+<br/>
 
-
-<table class="table">
+<table class="table table-bordered table-active table-striped">
     <tr>
+        <th>
+            SL
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.StatusType)
         </th>
@@ -19,26 +22,45 @@
         <th>
             @Html.DisplayNameFor(model => model.RequisitionId)
         </th>
-        <th></th>
+        <th>
+            Action
+        </th>
     </tr>
+    @{
+        var sl = 0;
+        if (Model.Count() != 0)
+        {
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.StatusType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RequisitionNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RequisitionId)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+            foreach (var item in Model)
+            {
+                sl++;
+                <tr>
+                    <td>
+                        @sl
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.StatusType)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RequisitionNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RequisitionId)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
+                        @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+                        @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                    </td>
+                </tr>
+            }
+        }
+        else
+        {
+            <tr>
+                <td class="text-center text-danger" colspan="5"> Data Not Found!</td>
+            </tr>
+        }
+    }
 
 </table>
