--- a/RMS.App/Views/GatePass/Index.cshtml
+++ b/RMS.App/Views/GatePass/Index.cshtml
@@ -5,25 +5,32 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-
-
-<div class="row">
-    <div class="col-md-12">
+<h2>Check-Out List</h2>
+<br/>
+<div class="container">
+    <div class="row align-items-center">
+        <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
+        </div>
+        <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
             <p>
                 @using (Html.BeginForm("Index", "GatePass", FormMethod.Get))
-                {
+            {
                     <b>Search by (Requisition Number)</b>
                     @Html.TextBox("searchByText")
                     <input type="submit" value="Search" />
                 }
             </p>
 
-        @*@Html.Partial("~/Views/GatePass/RequisitionIndex.cshtml")*@
+            @*@Html.Partial("~/Views/GatePass/RequisitionIndex.cshtml")*@
+        </div>
     </div>
 </div>
-<table class="table">
+<br/>
+<table class="table table-bordered table-active table-striped">
     <tr>
+        <th>
+            SL
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Id)
         </th>
@@ -36,30 +43,49 @@
         <th>
             @Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)
         </th>
-       
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Id)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StatusType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RequisitionId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Requisition.RequisitionNumber)
-        </td>
-      
-        <td>
-            @Html.ActionLink("Check-Out", "CheckOut", new { id=item.Id }) |
-            @Html.ActionLink("Check-In", "Details", new { id=item.RequisitionId }) 
-        </td>
+        <th>
+            Action
+        </th>
     </tr>
-}
+    @{
+        var sl = 0;
+        if (Model.Count() != 0)
+        {
+            sl++;
+            foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @sl
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.StatusType)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RequisitionId)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Requisition.RequisitionNumber)
+                    </td>
+
+                    <td>
+                        @Html.ActionLink("Check-Out", "CheckOut", new {id = item.Id}) |
+                        @Html.ActionLink("Check-In", "Details", new {id = item.RequisitionId})
+                    </td>
+                </tr>
+            }
+        }
+        else
+        {
+            <tr>
+                <td class="text-center text-danger" colspan="6"> Data Not Found!</td>
+            </tr>
+        }
+    }
+
 
 </table>
