--- a/RMS.App/Views/Requisitions/Index.cshtml
+++ b/RMS.App/Views/Requisitions/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Index";
 }
+<h2>All Requisitions</h2>
 <br/>
 @if (TempData["msg"] != null)
 {
@@ -12,13 +13,13 @@
 }
 <div class="container">
     <div class="row align-items-center">
-        <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
+        <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
             <p>
                 @Html.ActionLink("Create New", "Create",null,new {@class="btn btn-default"})
             </p>
         </div>
 
-        <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
+        <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
             <input type="text" placeholder="Search" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search () '" />
             <button class="nw-btn primary-btn">Search<span class="lnr lnr-arrow-right"></span></button>
         </div>
