--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -9,14 +9,17 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>RequisitionList</title>
+    <title>Requisition List</title>
 </head>
 <body>
     <p>
-        @Html.ActionLink("Create New", "Create")
+        @Html.ActionLink("Create New", "Create", null, htmlAttributes:new {@class="btn btn-default"})
     </p>
-    <table class="table">
+    <table class="table table-bordered table-active table-striped">
         <tr>
+            <th>
+                SL
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Employee.FullName)
             </th>
@@ -35,36 +38,55 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th></th>
+            <th>
+                Action
+            </th>
         </tr>
     
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Employee.FullName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FromPlace)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DestinationPlace)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartDateTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndDateTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-            </td>
-        </tr>
+@{
+    var sl = 0;
+    if (Model.Count() != 0)
+    {
+        foreach (var item in Model)
+        {
+            sl++;
+            <tr>
+                <td>@sl
+                    
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Employee.FullName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FromPlace)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DestinationPlace)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartDateTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EndDateTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
+                    @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+                    @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                </td>
+            </tr>
+        }
     }
+    else
+    {
+        <tr>
+            <td class="text-center text-danger" colspan="8"> Data Not Found!</td>
+        </tr>
+      }
+}
     
     </table>
 </body>
