--- a/RMS.App/Views/RequisitionStatus/Create.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model RMS.Models.EntityModels.RequisitionStatus
+﻿@model RMS.App.ViewModels.RequisitionStatusViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -13,36 +13,35 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>RequisitionStatus</h4>
+        <h4>Requisition Status</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.StatusType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.StatusType, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-9">
                 @Html.EditorFor(model => model.StatusType, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.StatusType, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.RequisitionId, "RequisitionId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="form-group row">
+            @Html.LabelFor(model => model.RequisitionId, "RequisitionId", htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-9">
                 @Html.DropDownList("RequisitionId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+        <div class="form-group row">
+            <div class="col-md-3"></div>
+            <div class="col-md-9">
+                <input type="submit" value="Create" class="btn btn-default"/> &nbsp;
+                @Html.ActionLink("Back to List", "Index",null, new {@class="btn btn-info"})
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
