--- a/RMS.App/Views/RequisitionStatus/Delete.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Delete.cshtml
@@ -1,16 +1,16 @@
-﻿@model RMS.Models.EntityModels.RequisitionStatus
+﻿@model RMS.App.ViewModels.RequisitionStatusViewModel
 
 @{
     ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Delete Requisition Status</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="text-danger">Are you sure you want to delete this?</h3>
+<hr />
 <div>
-    <h4>RequisitionStatus</h4>
-    <hr />
+    
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)
@@ -34,8 +34,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" /> &nbsp;
+            @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
         </div>
     }
 </div>
